# newpackage

./: README.md  setup.cfg  setup.py
new_package/: __main__.py  app.py  constants.py  templates.py
newpackage/: __main__.py  app.py  constants.py
