[metadata]
name = newpackage
version = 0.0.8
author = MC Gela
author_email = mcgela@mcgela.work
description = Create new Python package.
long_description = file:README.md
url = https://github.com/mcgela/newpackage
license = MIT
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
[options]
zip_safe = False
packages = find:
[options.entry_points]
console_scripts =
    newpackage = newpackage.app:main